# monkeyfs

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: api.md
monkeyfs/: __init__.py  base.py  config.py  context.py  isolated.py  memory.py  mount.py  patching.py  readonly.py  virtual.py  virtualfile.py
monkeyfs/patching/: __init__.py  core.py  fdtable.py  install.py  patches.py
tests/: test_bulk_operations.py  test_directory_ops.py  test_expanduser.py  test_fd_emulation.py  test_isolated.py  test_metadata.py  test_mount.py  test_patching.py  test_patching_pathlib.py  test_readonly.py  test_vfs_directories.py  test_vfs_optional.py  test_vfs_size_limit.py  test_virtual.py
