[project]
name = "monkeyfs"
version = "0.1.0"
description = "Transparent filesystem interception via monkey-patching."
readme = "README.md"
license = "MIT"
authors = [
    {name = "ashenfad"},
]
keywords = ["filesystem", "monkey-patch", "sandbox", "vfs", "interception"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/ashenfad/monkeyfs"
"Bug Tracker" = "https://github.com/ashenfad/monkeyfs/issues"
"Documentation" = "https://github.com/ashenfad/monkeyfs#readme"
"Source" = "https://github.com/ashenfad/monkeyfs"

[project.optional-dependencies]
kv = ["kvgit"]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-timeout",
]
test = [
    "pytest",
    "pytest-timeout",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E731"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["./"], exclude = ["tests*"]}}

[tool.setuptools.package-data]
monkeyfs = ["py.typed"]
